[package]
name = "staging-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
staging-frame-pallets = { path = "../staging-frame-pallets", default-features = false }
frame = { path =  "../../substrate/frame", default-features = false, features = ["runtime"] }

# TODO: https://github.com/paritytech/substrate/issues/14145
sp-api = { path =  "../../substrate/primitives/api", default-features = false }

# TODO: https://github.com/paritytech/substrate/issues/14127
frame-system = { path =  "../../substrate/frame/system", default-features = false }
frame-support = { path =  "../../substrate/frame/support", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false }
scale-info = { version = "2.6.0", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", path = "../../substrate/utils/wasm-builder", optional = true }

[features]
default = ["std"]
std = [
	"staging-frame-pallets/std",
	"frame/std",

	"sp-api/std",

	"frame-system/std",
	"frame-support/std",
	"parity-scale-codec/std",
	"scale-info/std",

	"substrate-wasm-builder",
]


