[package]
name = "staging-node"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "staging-node"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"]}

sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sc-executor = {  git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sc-service = {  git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }

sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }

frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api", default-features = false }

# These dependencies are used for the node template's RPCs
jsonrpsee = { features = ["server"] }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }

# Local Dependencies
staging-frame = { path = "../staging-frame" }

# CLI-specific dependencies
try-runtime-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", optional = true }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

[features]
default = []
