[package]
name = "node-manual-seal"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-manual-seal"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }

sc-cli = { path = "../../../substrate/client/cli" }
sc-executor = {  path = "../../../substrate/client/executor" }
sc-service = {  path = "../../../substrate/client/service" }
sc-telemetry = { path = "../../../substrate/client/telemetry" }
sc-keystore = { path = "../../../substrate/client/keystore" }
sc-transaction-pool = { path = "../../../substrate/client/transaction-pool" }
sc-transaction-pool-api = { path = "../../../substrate/client/transaction-pool/api" }
sc-consensus = { path = "../../../substrate/client/consensus/common" } # TODO: Naming of this crate is not aligned.
sc-consensus-manual-seal = { path = "../../../substrate/client/consensus/manual-seal" }
sc-client-api = { path = "../../../substrate/client/api" } # TODO: Naming of this crate is not aligned.

sp-core = { path = "../../../substrate/primitives/core" }
sp-consensus = { path = "../../../substrate/primitives/consensus/common" }
sp-consensus-aura = { path = "../../../substrate/primitives/consensus/aura" }
sp-consensus-grandpa = { path = "../../../substrate/primitives/consensus/grandpa" }
sp-runtime = { path = "../../../substrate/primitives/runtime" }
sp-io = { path = "../../../substrate/primitives/io" }
sp-timestamp = { path = "../../../substrate/primitives/timestamp" }
sp-inherents = { path = "../../../substrate/primitives/inherents" }
sp-keyring = { path = "../../../substrate/primitives/keyring" }

frame-system = { path = "../../../substrate/frame/system" }
pallet-transaction-payment = { path = "../../../substrate/frame/transaction-payment" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }

sc-rpc = { path = "../../../substrate/client/rpc" }
sc-rpc-api = { path = "../../../substrate/client/rpc-api" }
sc-basic-authorship = { path = "../../../substrate/client/basic-authorship" }

sp-api = { path = "../../../substrate/primitives/api" }
sp-blockchain = { path = "../../../substrate/primitives/blockchain" }
sp-block-builder = { path = "../../../substrate/primitives/block-builder" }

substrate-frame-rpc-system = { path = "../../../substrate/utils/frame/rpc/system" } # TODO: Naming of this crate is not aligned.
pallet-transaction-payment-rpc = { path = "../../../substrate/frame/transaction-payment/rpc" }

# Local Dependencies
runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

[features]
default = []
