[package]
name = "master-tutorial-frame"
version = "0.1.0"
edition = "2021"

[dependencies]
frame = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }

# These are needed by macros but not used directly. Too bad.
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
parity-scale-codec = { version = "3.0.0" }
scale-info = { version = "2.6.0" }
