[package]
name = "step-2-pallets"
version = "0.1.0"
edition = "2021"

[dependencies]
frame = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }

# TODO https://github.com/paritytech/substrate/issues/14127
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api" }
parity-scale-codec = { version = "3.0.0" }
scale-info = { version = "2.6.0" }
