[package]
name = "step-5-pallets"
version = "0.1.0"
edition = "2021"

[dependencies]
frame = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api", default-features = false }

# TODO https://github.com/paritytech/substrate/issues/14127
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false }
scale-info = { version = "2.6.0", default-features = false }

[features]
default = ["std"]
std = [
	"frame/std",

	"frame-support/std",
	"parity-scale-codec/std",
	"scale-info/std",
]
