[package]
name = "step-6-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
frame = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api", default-features = false, features = ["runtime"] }
frame-pallets = { package = "step-6-frame-pallets", path = "../frame-pallets", default-features = false }

# TODO: https://github.com/paritytech/substrate/issues/14145
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api", default-features = false }

# TODO: https://github.com/paritytech/substrate/issues/14127
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false }
scale-info = { version = "2.6.0", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "kiz-frame-api", optional = true }

[features]
default = ["std"]
std = [
	"frame-pallets/std",
	"frame/std",

	"sp-api/std",

	"frame-support/std",
	"parity-scale-codec/std",
	"scale-info/std",

	"substrate-wasm-builder",
]


